--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -45,7 +45,7 @@ p {
 }
 
 a {
-    color: #42dca3;
+    color: #f4ab1b;
     -webkit-transition: all .2s ease-in-out;
     -moz-transition: all .2s ease-in-out;
     transition: all .2s ease-in-out;
@@ -54,7 +54,7 @@ a {
 a:hover,
 a:focus {
     text-decoration: none;
-    color: #1d9b6c;
+    color: #b27d14;
 }
 
 .light {
@@ -305,17 +305,17 @@ a:focus {
 }
 
 .btn-default {
-    border: 1px solid #42dca3;
-    color: #42dca3;
+    border: 1px solid #f4ab1b;
+    color: #f4ab1b;
     background-color: transparent;
 }
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 1px solid #42dca3;
+    border: 1px solid #b27d14;
     outline: 0;
     color: #000;
-    background-color: #42dca3;
+    background-color: #f4ab1b;
 }
 
 ul.banner-social-buttons {
