--- a/css/gotyourback.css
+++ b/css/gotyourback.css
@@ -8,6 +8,10 @@
         font-size: 72px;
     }
 
+    .intro .intro-body .welcome-heading {
+        font-size: 36px;
+    }
+
     .intro .intro-body .intro-text {
         font-size: 26px;
     }
